# ni

./: .gitignore  README.md
.github/workflows/: test.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  logging_setup.py  main.py  schemas.py
backend/app/agent/: runtime.py  tools.py
backend/app/api/: chat.py  errors.py  voice.py
backend/app/characters/: loader.py  prompt.py  schemas.py
backend/app/evals/: runner.py  schemas.py
backend/app/llm/: base.py  claude_provider.py  embedding.py  factory.py  retry.py
backend/docs/: day1-notes.md  day2-notes.md  day3-notes.md  day4-notes.md  day5-notes.md  day6-notes.md  day7-notes.md  loop-engineering.md
backend/scripts/: start_qdrant.sh
backend/tests/: test_agent.py  test_api.py  test_characters.py  test_embedding.py  test_error_mapping.py  test_llm.py  test_memory.py  test_memory_factory.py  test_memory_pipeline.py  test_qdrant_store.py  test_retry.py  test_streaming.py  test_tts_stt.py  test_voice_api.py  test_voice_redis_cache.py  test_volcengine_voice.py
deploy/: README.md  aliyun-setup.sh  certbot-issue.sh  server-setup.sh
deploy/nginx/: ni.conf
deploy/systemd/: ni-backend.service  ni-ips-mock.service  ni-qdrant.service
ios/: Package.resolved  Package.swift  README.md
ios/docs/: loop11-notes.md
ios/scripts/: install-simulator.sh
ips-mock/: .env.example  .gitignore  README.md  pyproject.toml
ips-mock/app/: auth.py  cdn.py  data.py  ips.py  main.py  users.py
ips-mock/data/: characters.json
ips-mock/tests/: test_auth.py  test_ips.py
scripts/: start-backend.sh
(+80 files in other folders)
